feat: add imports show action
